--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "next-ts-template",
   "version": "0.1.0",
   "private": true,
+    "homepage": "https://oksanavovk.github.io/typescript-next/",
+
   "scripts": {
     "dev": "next dev",
     "test": "jest",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "next": "^15.0.1",
@@ -23,6 +26,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "gh-pages": "^6.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-fixed-jsdom": "^0.0.6",
