--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "dev": "next dev",
     "test": "jest",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint",
     "deploy": "gh-pages -d out"
   },
   "dependencies": {
-    "next": "^15.1.2",
+    "next": "^13.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
